# Finch-mlir

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pixi.toml  pyproject.toml  setup.py  test13.mlir  test14.mlir
.github/workflows/: ci.yaml  ci.yml
include/Finch/: CMakeLists.txt  FinchOps.td
lib/Finch/: FinchPasses.cpp
python/: CMakeLists.txt
requirements/: requirements.txt
scripts/: docker_prepare_ccache.sh
test/: CMakeLists.txt  lit.cfg.py
test/Finch/: access.mlir  looplet-complex.mlir  looplet-lookup.mlir  looplet-run.mlir  looplet-sequence.mlir  looplet-stepper.mlir
tmp_test/: test11.mlir  test9.mlir
