[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11>=2.10.4",
    "numpy>=2",
    "PyYAML",
    "nanobind",
    "delvewheel; platform_system=='Windows'",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "finch-mlir"
dynamic = ["version"]
description = "Finch MLIR distribution as wheel."
readme = "README.md"
dependencies = [
    "PyYAML>=6",
    "numpy>=1.17",
]

[tool.setuptools.packages.find]
include = ["mlir_finch", "mlir_finch.*"]

[tool.setuptools_scm]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
build-verbosity = 1
test-requires = ["pytest", "pytest-cov", "PyYAML", "scipy"]
before-test = "pip install --no-deps sparse@git+https://github.com/pydata/sparse.git"
test-command = "python -m pytest --pyargs sparse.mlir_backend"

[tool.cibuildwheel.linux]
skip = ["*-manylinux_i686", "*-musllinux*"]
environment = { PATH = "/usr/lib/ccache:/usr/lib64/ccache:/usr/lib/ccache/bin:$PATH" }
before-build = [
    "{project}/scripts/docker_prepare_ccache.sh"
]
environment-pass = ["HOST_CCACHE_DIR", "SPARSE_BACKEND"]

[tool.cibuildwheel.macos]
environment = { PATH = "/usr/local/opt/ccache/libexec:$PATH" }
repair-wheel-command = [
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"
]

[tool.cibuildwheel.windows]
build = "cp310-win_amd64 cp311-win_amd64 cp312-win_amd64 cp313-win_amd64"
